# django-tables2_bulma-template

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_manage.py
.github/workflows/: ci.yml
django_tables2_bulma_template/: MANIFEST.in  __init__.py
django_tables2_bulma_template/templates/django-tables2/: bulma.html
django_tables2_bulma_template/templatetags/: django_tables2_bulma_template.py
django_tables2_bulma_template/utils/templatetags/: django_tables2_bulma_template_extras.py
tests/: requirements.txt  settings.py  test_bulma.py  urls.py  views.py
tests/templates/: base.html  table.html
