[metadata]
name = django-tables2_bulma-template-NKay
author = NKay
author_email = py@nkay.info
description = A bulma template for django-tables2
license-file = LICENSE.txt
url = https://github.com/nkay08/django-tables2_bulma-template
long_desciption = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=119
default_section=THIRDPARTY
known_django=django
known_first_party=django-tables2, django-tables2_bulma-template
sections=THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
